@@ -1,4 +1,4 @@
-# $Id: a.gwf,v 3.14 2000-05-25 09:01:16 ddr Exp $
+# $Id: a.gwf,v 3.15 2000-05-25 11:46:27 ddr Exp $
 # Parameters in "<body>" (background, color, etc)
 # Here is a palette of possibilities... test and choose one of them
 # if you want by removing the initial "#"
@@ -59,8 +59,9 @@ default_lang=fr
 # Authorization for wizards to send images (no: cannot; yes: can)
 can_send_image=no
 
-# Optional path for images defined by the "image" field, i.e. *not* added
-# by "send image" (this value, when set, typically could start with http://...)
+# Optional path for images defined by the "image" field (i.e. *not* added
+# by "send image"). Applies only for images not found in the image/base
+# directory. This value, when set, could typically start with http://...
 images_path=
 
 # Global authorization file for this data base (overriding the value
